--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,11 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <th:block th:include="fragments/header.html :: header"></th:block>
+    <title>Home | Fórum NG</title>
+    <style>
+        .add-topic-square{
+            color: #999999;
+            transition: all 150ms ease-in;
+        }
+        
+        .add-topic-square:hover, .add-topic-square:focus{
+            border-color: indigo;
+            color: indigo !important;
+            cursor: pointer;
+        }
+
+        .instant-reply{
+            border: 1px solid #f0f0f0;
+            border-radius: 50%;
+            transition: all 150ms ease-in;
+            background-color: #ffffff;
+        }
+
+        .instant-reply:hover, .instant-reply:focus{
+            border-color: #cccccc;
+            background-color: #f0f0f0;
+        }
+
+        .card{
+            border-top: 3px indigo solid;
+            border-top-right-radius: 10px;
+            border-top-left-radius: 10px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Olá</h1>
+    <th:block th:include="fragments/navbar.html :: navbar"></th:block>
+
+    <main class="content">
+        <div class="container mt-5">
+            <div class="row ">
+                <div class="col">
+                    <nav aria-label="breadcrumb">
+                        <ol class="breadcrumb bg-transparent px-0 mb-0 pb-0">
+                          <li class="breadcrumb-item active" aria-current="page">Início</li>
+                        </ol>
+                      </nav>
+                    <h1 class="display-4">Bem vindo ao fórum!</h1>
+                    <p class="lead text-muted">Publique, troque ideias e seja feliz</p>
+                </div>
+            </div>
+            <hr>
+            <div class="row mb-4">
+                <div class="col-lg-8 order-lg-0 order-1 my-2">
+                    <th:block th:each="post : ${posts}">
+                        <div class="card shadow-sm mb-2">
+                            <div class="card-body">
+                                <div class="row justify-content-between ">
+                                    <div class="col">
+                                        <small class="text-muted ">Por: <th:block th:text="${post.user.name}"></th:block></small>
+                                    </div>
+                                    <div class="col text-right">
+                                        <small class="text-muted "><i class="fas fa-calendar mr-2" aria-hidden="true"></i>
+                                            <th:block th:text="${#temporals.format(post.createdAt, 'dd/MM/yyyy HH:mm')}"></th:block>
+                                        </small> 
+                                    </div> 
+                                </div>
+                                
+                                <h2 class="h4 font-weight-bold text-truncate mt-2" th:text="${post.title}"></h2>
+                                <p class="lead text-truncate" th:text="${post.text}"></p>
+                                
+                                <div class="row justify-content-between align-items-center">
+                                    <div class="col text-left">
+                                        <small class="text-muted">Respostas: <th:block th:text="${#lists.size(post.answers)}"></th:block></small>
+                                    </div>
+                                    <div class="col text-right">
+                                        <a class="btn btn-default btn-sm instant-reply mr-3" data-placement="top" data-toggle="tooltip" title="Resposta rápida" href="#" role="button"><i class="fas fa-reply" aria-hidden="true"></i></a>
+
+                                        <a class="btn btn-primary btn-sm" href="#" role="button"><i class="fas fa-arrow-right mr-2" aria-hidden="true"></i>Ver post completo</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </th:block>
+                    <div class="row" th:if="${totalPages > 0}">
+                        <div class="col d-flex justify-content-end">
+                            <nav aria-label="Page navigation ">
+                                <ul class="pagination" >
+                                        
+                                    <li class="page-item" th:classappend="${currentPage == 0} ? disabled">
+                                        <a class="page-link"  th:href="@{/(page=${currentPage-1})}" tabindex="-1">Anterior</a>
+                                    </li>
+
+                                    <th:block th:each="pageNumber : ${pages}">
+                                        <li class="page-item" th:classappend="${pageNumber-1==currentPage} ? active">
+                                            <a class="page-link"  th:href="@{/(page=${pageNumber-1})}" th:text=${pageNumber}></a>
+                                        </li>
+                                    </th:block>
+
+                                    <li class="page-item" th:classappend="${currentPage+1 == totalPages} ? disabled">
+                                        <a class="page-link"  th:href="@{/(page=${currentPage+1})}" tabindex="-1">Próximo</a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 order-lg-1 order-0 my-2">
+                    <div class="card shadow-sm px-2 py-3 px-md-4 py-md-5 add-topic-square">
+                        <a href="#" class="text-decoration-none">
+                            <div class="card-body d-flex justify-content-center align-items-center flex-column ">
+                                <i class="fas fa-plus fa-2x "></i>
+                                <p class="mt-4 fa-lg">Adicionar novo post</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+    </main>
+
+    <!-- <th:block th:include="fragments/footer.html :: footer"></th:block> -->
+
+    <th:block th:include="fragments/scripts.html :: scripts"></th:block>
 </body>
 </html>
