--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -18,5 +18,9 @@
             right: 0;
             border-top-color: #3c44a3;
         }
+
+        .navbar-nav .nav-item.active{
+            border-bottom: 2px solid white;;
+        }
     </style>
 </template>
