--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -5,18 +5,35 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-        <a class="navbar-brand font-weight-bold" href="#">Fórum NG</a>
+        <a class="navbar-brand font-weight-bold" th:href="@{/}">Fórum NG</a>
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">Início</a>
+          <li class="nav-item" th:classappend="${#httpServletRequest.requestURI == '/'} ? active">
+            <a class="nav-link" aria-current="page" th:href="@{/}">Início</a>
           </li>
+          <th:block sec:authorize="isAuthenticated()">
+            <li class="nav-item" th:classappend="${#httpServletRequest.requestURI == '/profile'} ? active">
+              <a class="nav-link" aria-current="page" th:href="@{/profile}">Perfil</a>
+            </li>
+          </th:block>
         </ul>
-        <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">Entrar</a>
-          </li>
-          <a class="btn btn-light ml-4" aria-current="page" href="#">Cadastre-se</a>
-        </ul>
+        <th:block sec:authorize="isAuthenticated()">
+          <ul class="navbar-nav ml-auto  mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page">Olá, <th:block th:text="${#strings.substringBefore(#authentication.getPrincipal().getName(),' ')}"></th:block></a>
+            </li>
+            <a class="btn btn-danger ml-4" aria-current="page" th:href="@{/logout}"><i class="fas fa-sign-out-alt mr-2" aria-hidden="true"></i>Sair</a>
+          </ul>
+
+        </th:block>
+
+        <th:block sec:authorize="isAnonymous()">
+          <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" th:href="@{/login}">Entrar</a>
+            </li>
+            <a class="btn btn-light ml-4" aria-current="page" th:href="@{/register}">Cadastre-se</a>
+          </ul>
+        </th:block>
       </div>
     </div>
   </nav>
