--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -68,16 +68,14 @@
                                 </div>
                                 
                                 <h2 class="h4 font-weight-bold text-truncate mt-2" th:text="${post.title}"></h2>
-                                <p class="lead text-truncate" th:text="${post.text}"></p>
+                                <p class="lead text-truncate" th:utext="${post.text}"></p>
                                 
                                 <div class="row justify-content-between align-items-center">
                                     <div class="col text-left">
                                         <small class="text-muted">Respostas: <th:block th:text="${#lists.size(post.answers)}"></th:block></small>
                                     </div>
                                     <div class="col text-right">
-                                        <a class="btn btn-default btn-sm instant-reply mr-3" data-placement="top" data-toggle="tooltip" title="Resposta rápida" href="#" role="button"><i class="fas fa-reply" aria-hidden="true"></i></a>
-
-                                        <a class="btn btn-primary btn-sm" href="#" role="button"><i class="fas fa-arrow-right mr-2" aria-hidden="true"></i>Ver post completo</a>
+                                        <a class="btn btn-primary btn-sm" th:href="@{/posts/{id}(id=${post.id})}" role="button"><i class="fas fa-arrow-right mr-2" aria-hidden="true"></i>Ver post completo</a>
                                     </div>
                                 </div>
                             </div>
@@ -108,7 +106,7 @@
                 </div>
                 <div class="col-lg-4 order-lg-1 order-0 my-2">
                     <div class="card shadow-sm px-2 py-3 px-md-4 py-md-5 add-topic-square">
-                        <a href="#" class="text-decoration-none">
+                        <a th:href="@{/posts/new}" class="text-decoration-none">
                             <div class="card-body d-flex justify-content-center align-items-center flex-column ">
                                 <i class="fas fa-plus fa-2x "></i>
                                 <p class="mt-4 fa-lg">Adicionar novo post</p>
