--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -63,7 +63,7 @@
                                 <div class="card-body">
                                     <div class="row justify-content-between ">
                                         <div class="col">
-                                            <!-- <small class="text-muted ">Por: <th:block th:text="${#strings.substringBefore(#authentication.getPrincipal().getName(),' ')}"></th:block></small> -->
+                                            <small class="text-muted ">Por: Você</small>
                                         </div>
                                         <div class="col text-right">
                                             <small class="text-muted "><i class="fas fa-calendar mr-2" aria-hidden="true"></i>
@@ -73,15 +73,15 @@
                                     </div>
                                     
                                     <h2 class="h4 font-weight-bold text-truncate mt-2" th:text="${post.title}"></h2>
-                                    <p class="lead text-truncate" th:text="${post.text}"></p>
+                                    <p class="lead text-truncate" th:utext="${post.text}"></p>
                                     
                                     <div class="row justify-content-between align-items-center">
                                         <div class="col text-left">
                                             <small class="text-muted">Respostas: <th:block th:text="${#lists.size(post.answers)}"></th:block></small>
                                         </div>
                                         <div class="col text-right">
-                                            <a class="btn btn-default btn-sm instant-reply mr-3" data-placement="top" data-toggle="tooltip" title="Resposta rápida" href="#" role="button"><i class="fas fa-reply" aria-hidden="true"></i></a>
-                                            <a class="btn btn-primary btn-sm" href="#" role="button"><i class="fas fa-arrow-right mr-2" aria-hidden="true"></i>Ver post completo</a>
+                                            <a class="btn btn-default btn-sm" th:href="@{/posts/update/{id}(id=${post.id})}" role="button"><i class="fas fa-edit mr-2" aria-hidden="true"></i>Editar</a>
+                                            <a class="btn btn-primary btn-sm" th:href="@{/posts/{id}(id=${post.id})}" role="button"><i class="fas fa-arrow-right mr-2" aria-hidden="true"></i>Ver post completo</a>
                                         </div>
                                     </div>
                                 </div>
@@ -113,7 +113,7 @@
                 </div>
                 <div class="col-lg-4 order-lg-1 order-0 my-2">
                     <div class="card shadow-sm px-2 py-3 px-md-4 py-md-5 add-topic-square">
-                        <a href="#" class="text-decoration-none">
+                        <a th:href="@{/posts/new}" class="text-decoration-none">
                             <div class="card-body d-flex justify-content-center align-items-center flex-column ">
                                 <i class="fas fa-plus fa-2x "></i>
                                 <p class="mt-4 fa-lg">Adicionar novo post</p>
@@ -122,15 +122,24 @@
                     </div>
 
                     <div class="list-group py-4">
+                        <a href="#" class="list-group-item list-group-item-action active flex-column align-items-start ">
+                            <h5 class="mb-1">Suas respostas</h5>
+                        </a>
                         <th:block th:each="post : ${posts}">
                             <th:block th:if="${post.parentPost != null}">
-                                <a href="#" class="list-group-item list-group-item-action flex-column align-items-start ">
+                                <a th:href="@{/posts/{id}(id=${post.parentPost.id})}" class="list-group-item list-group-item-action flex-column align-items-start ">
+                                    
                                     <div class="d-flex w-100 justify-content-between">
-                                      <h5 class="mb-1">Respondeu <th-block th:text="${post.parentPost.user.id}"></th-block></h5>
-                                      <small>3 days ago</small>
+                                        <small class="text-truncate font-weight-bold" th:text="${post.parentPost.title != null ? post.parentPost.title : post.parentPost.text}"></small>
                                     </div>
-                                    <p class="mb-1 text-truncate" th:text="${post.parentPost.text}"></p>
-                                    <small>Donec id elit non mi porta.</small>
+                                    <h5 class="text-truncate mt-2">Você: <th:block  th:utext="${post.text}"></th:block>  </h5>
+
+                                    <small class="text-muted "><i class="fas fa-calendar mr-2" aria-hidden="true"></i>
+                                        <th:block th:text="${#temporals.format(post.createdAt, 'dd/MM/yyyy HH:mm')}"></th:block>
+                                    </small> 
+                                    <small class="text-muted float-right">
+                                        Ver completo
+                                    </small> 
                                   </a>
                             </th:block>
                         </th:block>
