--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -7,7 +7,8 @@
 
 </head>
 <body>
-    <div class="min-h-screen flex items-center justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8">
+    <div id="app">
+      <div class="min-h-screen flex items-center justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8">
         <div class="max-w-md w-full space-y-8">
           <div>
             <img class="mx-auto h-12 w-auto" src="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg" alt="Workflow">
@@ -21,17 +22,29 @@
               </a>
             </p>
           </div>
-          <form class="mt-8 space-y-6" th:action="@{/register}" th:object="${user}" method="post">
+          <form class="mt-8 space-y-6" th:action="@{/register}" th:object="${userRequestDTO}" method="post">
+            <th:block th:each="erro : ${#fields.detailedErrors()}">
+              <div class="relative py-3 pl-4 pr-10 leading-normal text-red-700 bg-red-100 rounded-lg" role="alert">
+                <p th:text="${erro.message}"></p>
+                <button type="button" @click="removeAlert($event)">
+                  <span class="absolute inset-y-0 right-0 flex items-center mr-4">
+                    <svg class="w-4 h-4 fill-current" role="button" viewBox="0 0 20 20"><path d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd" fill-rule="evenodd"></path></svg>
+                  </span>
+                </button>
+              </div>
+            </th:block>
+            
+
             <div class="rounded-md shadow-sm -space-y-px">
-              <div>
+              <div th:classappend="${#fields.hasErrors('name')} ? has-error">
                   <label for="name" class="sr-only">Nome Completo</label>
                   <input id="name" th:field="*{name}" type="text" required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none rounded-b-md focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Nome Completo">
               </div>
-              <div>
+              <div th:classappend="${#fields.hasErrors('email')} ? has-error">
                 <label for="email-address" class="sr-only">Endereço de E-mail</label>
                 <input id="email-address" th:field="*{email}" type="email" autocomplete="email" required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md rounded-b-md my-2 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Endereço de E-mail">
               </div>
-              <div>
+              <div th:classappend="${#fields.hasErrors('password')} ? has-error">
                 <label for="password" class="sr-only">Password</label>
                 <input id="password" th:field="*{password}" type="password" autocomplete="current-password" required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md rounded-b-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Senha">
               </div>
@@ -51,7 +64,23 @@
           </form>
         </div>
       </div>
+    </div>
 
     <th:block th:include="fragments/footer.html :: footer"></th:block>
+    <script src="https://unpkg.com/vue@next"></script>
+    <script>
+      const app = Vue.createApp({
+        data(){
+          return {
+            count: 5
+          }
+        },
+        methods: {
+          removeAlert: function(e){
+            console.log(e)
+          }
+        },
+      }).mount("#app");
+    </script>
 </body>
 </html> 
