--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -53,29 +53,29 @@
             <hr>
             <div class="row mb-4">
                 <div class="col-lg-8 order-lg-0 order-1 my-2">
-                    <th:block th:each="post : ${posts}">
+                    <th:block th:each="topic : ${topics}">
                         <div class="card shadow-sm mb-2">
                             <div class="card-body">
                                 <div class="row justify-content-between ">
                                     <div class="col">
-                                        <small class="text-muted ">Por: <th:block th:text="${post.user.name}"></th:block></small>
+                                        <small class="text-muted ">Por: <th:block th:text="${topic.user.name}"></th:block></small>
                                     </div>
                                     <div class="col text-right">
                                         <small class="text-muted "><i class="fas fa-calendar mr-2" aria-hidden="true"></i>
-                                            <th:block th:text="${#temporals.format(post.createdAt, 'dd/MM/yyyy HH:mm')}"></th:block>
+                                            <th:block th:text="${#temporals.format(topic.createdAt, 'dd/MM/yyyy HH:mm')}"></th:block>
                                         </small> 
                                     </div> 
                                 </div>
                                 
-                                <h2 class="h4 font-weight-bold text-truncate mt-2" th:text="${post.title}"></h2>
-                                <p class="lead text-truncate" th:utext="${post.text}"></p>
+                                <h2 class="h4 font-weight-bold text-truncate mt-2" th:text="${topic.title}"></h2>
+                                <p class="lead text-truncate" th:utext="${topic.text}"></p>
                                 
                                 <div class="row justify-content-between align-items-center">
                                     <div class="col text-left">
-                                        <small class="text-muted">Respostas: <th:block th:text="${#lists.size(post.answers)}"></th:block></small>
+                                        <small class="text-muted">Restopicas: <th:block th:text="${#lists.size(topic.answers)}"></th:block></small>
                                     </div>
                                     <div class="col text-right">
-                                        <a class="btn btn-primary btn-sm" th:href="@{/posts/{id}(id=${post.id})}" role="button"><i class="fas fa-arrow-right mr-2" aria-hidden="true"></i>Ver post completo</a>
+                                        <a class="btn btn-primary btn-sm" th:href="@{/topics/{id}(id=${topic.id})}" role="button"><i class="fas fa-arrow-right mr-2" aria-hidden="true"></i>Ver topic completo</a>
                                     </div>
                                 </div>
                             </div>
@@ -106,10 +106,10 @@
                 </div>
                 <div class="col-lg-4 order-lg-1 order-0 my-2">
                     <div class="card shadow-sm px-2 py-3 px-md-4 py-md-5 add-topic-square">
-                        <a th:href="@{/posts/new}" class="text-decoration-none">
+                        <a th:href="@{/topics/new}" class="text-decoration-none">
                             <div class="card-body d-flex justify-content-center align-items-center flex-column ">
                                 <i class="fas fa-plus fa-2x "></i>
-                                <p class="mt-4 fa-lg">Adicionar novo post</p>
+                                <p class="mt-4 fa-lg">Adicionar novo topic</p>
                             </div>
                         </a>
                     </div>
