--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -49,15 +49,15 @@
                           <li class="breadcrumb-item active" aria-current="page">Meu perfil</li>
                         </ol>
                       </nav>
-                    <h1 class="display-4">Olá, <th:block th:text="${#strings.substringBefore(#authentication.getPrincipal().getName(),' ')}"></th:block>!</h1>
+                    <h1 class="display-4">Olá, <th:block th:text="${#strings.substringBefore(userVM.name,' ')}"></th:block>!</h1>
                     <p class="lead text-muted mb-0">Montamos um perfil simples para você</p>
-                    <small class="text-muted">Logado com <th:block th:text="${#authentication.getPrincipal().getUsername()}"></th:block> - <th:block th:text="${#authentication.getPrincipal().getId()}"></th:block></small>
+                    <small class="text-muted">Logado com <th:block th:text="${userVM.email}"></th:block></small>
                 </div>
             </div>
             <hr>
             <div class="row mb-4">
                 <div class="col-lg-8 order-lg-0 order-1 my-2">
-                    <th:block th:each="post : ${user.topics}">
+                    <th:block th:each="post : ${userTopicsVM}">
                         <th:block th:if="${post.title != null}">
                             <div class="card shadow-sm mb-2">
                                 <div class="card-body">
@@ -65,23 +65,23 @@
                                         <div class="col">
                                             <small class="text-muted ">Por: Você</small>
                                         </div>
-                                        <div class="col text-right">
+                                        <!-- <div class="col text-right">
                                             <small class="text-muted "><i class="fas fa-calendar mr-2" aria-hidden="true"></i>
                                                 <th:block th:text="${#temporals.format(post.createdAt, 'dd/MM/yyyy HH:mm')}"></th:block>
                                             </small> 
-                                        </div> 
+                                        </div>  -->
                                     </div>
                                     
                                     <h2 class="h4 font-weight-bold text-truncate mt-2" th:text="${post.title}"></h2>
                                     <p class="lead text-truncate" th:utext="${post.text}"></p>
                                     
                                     <div class="row justify-content-between align-items-center">
-                                        <div class="col text-left">
+                                        <!-- <div class="col text-left">
                                             <small class="text-muted">Respostas: <th:block th:text="${#lists.size(post.answers)}"></th:block></small>
-                                        </div>
+                                        </div> -->
                                         <div class="col text-right">
-                                            <a class="btn btn-default btn-sm" th:href="@{/posts/update/{id}(id=${post.id})}" role="button"><i class="fas fa-edit mr-2" aria-hidden="true"></i>Editar</a>
-                                            <a class="btn btn-primary btn-sm" th:href="@{/posts/{id}(id=${post.id})}" role="button"><i class="fas fa-arrow-right mr-2" aria-hidden="true"></i>Ver post completo</a>
+                                            <a class="btn btn-default btn-sm" th:href="@{/topics/edit/{friendlyHash}(friendlyHash=${post.friendlyHash})}" role="button"><i class="fas fa-edit mr-2" aria-hidden="true"></i>Editar</a>
+                                            <a class="btn btn-primary btn-sm" th:href="@{/topics/{friendlyHash}(friendlyHash=${post.friendlyHash})}" role="button"><i class="fas fa-arrow-right mr-2" aria-hidden="true"></i>Ver post completo</a>
                                         </div>
                                     </div>
                                 </div>
@@ -113,7 +113,7 @@
                 </div>
                 <div class="col-lg-4 order-lg-1 order-0 my-2">
                     <div class="card shadow-sm px-2 py-3 px-md-4 py-md-5 add-topic-square">
-                        <a th:href="@{/posts/new}" class="text-decoration-none">
+                        <a th:href="@{/topics/create}" class="text-decoration-none">
                             <div class="card-body d-flex justify-content-center align-items-center flex-column ">
                                 <i class="fas fa-plus fa-2x "></i>
                                 <p class="mt-4 fa-lg">Adicionar novo post</p>
@@ -121,13 +121,13 @@
                         </a>
                     </div>
 
-                    <div class="list-group py-4">
+                    <!-- <div class="list-group py-4">
                         <a href="#" class="list-group-item list-group-item-action active flex-column align-items-start ">
                             <h5 class="mb-1">Suas respostas</h5>
                         </a>
-                        <th:block th:each="post : ${user.answers}">
+                        <th:block th:each="post : ${userVM.answers}">
                             <th:block th:if="${post.parentPost != null}">
-                                <a th:href="@{/posts/{id}(id=${post.parentPost.id})}" class="list-group-item list-group-item-action flex-column align-items-start ">
+                                <a th:href="@{/topics/{id}(id=${post.parentPost.id})}" class="list-group-item list-group-item-action flex-column align-items-start ">
                                     
                                     <div class="d-flex w-100 justify-content-between">
                                         <small class="text-truncate font-weight-bold" th:text="${post.parentPost.title != null ? post.parentPost.title : post.parentPost.text}"></small>
@@ -143,7 +143,7 @@
                                   </a>
                             </th:block>
                         </th:block>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             
